--- a/index.html
+++ b/index.html
@@ -153,9 +153,6 @@
                 <div class="col-xs-12 col-md-6">
                     <div class="video-photo">
                         <img src="images/video-image.jpg" alt="">
-                        <a href="https://www.youtube.com/watch?v=ScrDhTsX0EQ" class="popup video-button">
-                            <img src="images/play-button.png" alt="">
-                        </a>
                     </div>
                 </div>
                 <div class="col-xs-12 col-md-5 col-md-offset-1">
@@ -305,8 +302,8 @@
                     <div class="space-20"></div>
                     <p>Sirb mobile Application is fully supported on both Android and IOS and it will be soon available on Windows phone OS   </p>
                     <div class="space-60"></div>
-                    <a href="#" class="bttn-white sq"><img src="images/apple-icon.png" alt="apple icon"> Apple Store</a>
-                    <a href="#" class="bttn-white sq"><img src="images/play-store-icon.png" alt="Play Store Icon"> Play Store</a>
+                    <a href="#" class="bttn-white sq"><img src="images/apple-icon.png" alt="apple icon"> Coming Soon ON APPLE STORE</a>
+                    <a href="#" class="bttn-white sq"><img src="images/play-store-icon.png" alt="Play Store Icon"> Coming Soon on PLAY STORE</a>
                 </div>
             </div>
         </div>
@@ -333,7 +330,7 @@
                        
                                 <span class="lnr lnr-map-marker"></span>
                             </div>
-                            <p>ESI ex INI oued Smar <br /> El Harrach Algeirs, Algeria</p>
+                            <p>2823 Prince Saud Al Faisal, Ar Rawdah,  <br /> Jeddah 23431 7092, Saoudi Arabia</p>
                         </div>
                         <div class="space-30 hidden visible-xs"></div>
                     </div>
@@ -342,7 +339,7 @@
                             <div class="box-icon">
                                 <span class="lnr lnr-phone-handset"></span>
                             </div>
-                            <p> +213 779749903 <br /> +213 549200603 <br /> +213 658575409</p>
+                            <p> +213 556613709 <br /> +213 549200603 <br /> </p>
                         </div>
                         <div class="space-30 hidden visible-xs"></div>
                     </div>
